fixed mobile presidents

--- a/policies.html
+++ b/policies.html
@@ -127,14 +127,19 @@ h1 {
                 <li>Provide guidance on submitting recommendation letters and adding colleges to Naviance.</li>
                 <li>Assist with completing FAFSA and other financial aid applications.</li>
             </ul>
-            <p class="details">We aim to simplify the college application process by providing clear and concise
-                information to all students.</p>
+            <p class="details">While many students enter senior year ready for college, a lot don’t have that kind of resources. We want to simplify
+            the college process by creating short graphics that explain common college application items, like the Common App,
+            QuestBridge, EA ED and REA, how to submit recommendation letters, how to add colleges to Naviance, FAFSA,</p>
         </li>
 
         <li>
             <strong>Google Calendar with Important Dates</strong>
-            <p class="details">We will create a shared Google calendar with deadlines for scholarships, colleges, and
-                events. This will help students stay organized and informed.</p>
+            <ul class="sub-bullets">
+                <li>Shared Google Calendar with important dates, information, and events. </li>
+            </ul>
+            <p class="details">We want to have a shared Google calendar with deadlines for scholarships, colleges, and events. This can also work in
+            conjunction with the morning announcements submissions
+</p>
         </li>
 
         <li>
@@ -166,13 +171,18 @@ h1 {
 
         <li>
             <strong>Stuy Schedule App/Escalator Status</strong>
-            <p class="details">We will work on maintaining and improving the Stuy Schedule App, including features like
-                a live escalator status. Additionally, we aim to collaborate with today.stuysu.org to enhance the
-                overall student experience.</p>
+            <p class="details">The Stuy Schedule App is a SU IT project passed down from year to year. This year it was passed down to Anthony Chen who
+            plans to add many features, such as a live escalator status. The Chen-Karim ticket is the only ticket that can promise
+            maintenance and new features.</p>
         </li>
 
         <li>
             <strong>StuyCompare.Live</strong>
+            <ul class="sub-bullets">
+                <li>Helped over 800 students this year find others in their classes
+            </li>
+            </ul>
+
             <p class="details">We will continue to develop StuyCompare.Live to facilitate schedule sharing and help
                 students find others in their classes. Our goal is to provide a seamless and efficient platform for
                 student interactions.</p>
