added longer bodies

--- a/policies.html
+++ b/policies.html
@@ -148,11 +148,19 @@ h1 {
                 <li>Open morning announcer positions to non-SU seniors, allowing more students to participate.</li>
                 <li>Continue the tradition of hearing friends' voices over the loudspeakers every morning.</li>
             </ul>
-            <p class="details">We believe in fostering a sense of community through inclusive morning announcements.</p>
+            <p class="details">Morning announcements are traditionally a Senior Caucus thing. This year the Senior Caucus opened up Morning Announcers
+            to the rest of the grade. There have been rumors mentioning wanting to go back to restricting it to only the caucus
+            presidents and the SU president. The morning announcements are a fun way to hear your friends over the loudspeakers
+            every morning. The Chen Karim ticket promises to continue allowing non SU seniors to volunteer to be morning announcers.
+</p>
         </li>
 
         <li>
             <strong>Prom Ticket Thermometer</strong>
+            <ul class="sub-bullets">
+                <li>A live way to check on the estimated price of prom tickets
+</li>
+                </ul>
             <p class="details">We will create a webpage on our website that shows the current estimate of the prom
                 ticket price. The thermometer will update as we have fundraisers, reflecting the progress towards the
                 final ticket price.</p>
@@ -165,15 +173,23 @@ h1 {
                 <li>Invite seniors on stage to fill the mnemonic cube, creating a memorable tradition for the Class of
                     '24.</li>
             </ul>
-            <p class="details">We want to bring back the significance of the mnemonic cube and engage seniors in its
-                decoration.</p>
+            <p class="details">Since COVID, the class mnemonic cubes have been generally forgotten about or filled over the summer. We would like to
+            bring it back to a class-wide decision and also invite seniors on stage to fill it</p>
         </li>
 
         <li>
             <strong>Stuy Schedule App/Escalator Status</strong>
+            <ul class="sub-bullets">
+                <li>We want to revamp the Stuy Schedule App and add new features</li>
+                <li>Add an escalator status page</li>
+                <li>Show what class you have next
+</li>
+
+                </ul>
             <p class="details">The Stuy Schedule App is a SU IT project passed down from year to year. This year it was passed down to Anthony Chen who
             plans to add many features, such as a live escalator status. The Chen-Karim ticket is the only ticket that can promise
             maintenance and new features.</p>
+            <img src="schedule.png">
         </li>
 
         <li>
@@ -181,6 +197,7 @@ h1 {
             <ul class="sub-bullets">
                 <li>Helped over 800 students this year find others in their classes
             </li>
+            <li>An easy website to compare schedules with the rest of the grade</li>
             </ul>
 
             <p class="details">We will continue to develop StuyCompare.Live to facilitate schedule sharing and help
@@ -196,14 +213,23 @@ h1 {
                 <li>Introduce more varieties of merch, such as bracelets and beanies, to enhance the Class of '24
                     merchandise options.</li>
             </ul>
-            <p class="details">We want to provide flexibility and a wider range of choices in the Senior Grad Package.
+            <p class="details">The Senior Grad Packages every year are always very plain and expensive. We want to offer an option where people who
+            don’t need or want to purchase a cap and gown can still purchase the Class of ‘24 merch. We’d also like to create more
+            varieties of merch, not just the traditional t-shirt. Like bracelets and beanies.
+
             </p>
         </li>
 
         <li>
             <strong>Paint the Senior Bar</strong>
-            <p class="details">We propose repainting the Senior Bar as a way for the Class of '24 to leave a lasting
-                mark on the school and showcase our class spirit.</p>
+            <ul class="sub-bullets">
+                <li> <ul class="sub-bullets">
+                <li>Repaint the Senior Bar to leave a mark on the school</li>
+                <li>Allow more people to take an effort in helping</li>
+            
+            </ul>
+            <p class="details">There were plans to repaint the Sophomore Bar that ended up falling through, but then the Class of ‘25 got to repaint
+            the bar this year. We would like to also repaint the Senior Bar and leave a mark on the school from the Class of ‘24.</p>
         </li>
 
         <li>
@@ -235,6 +261,11 @@ h1 {
 
         <li>
             <strong>Improved Collaboration with the Indicator</strong>
+            <ul class="sub-bullets">
+                <li>More student input on spirit days and yearbook theme
+                </li>
+                <li>Clearer information on how to submit to the yearbook
+                                    </li> </ul>
             <p class="details">We will establish a better relationship with the Stuyvesant Indicator, working together
                 to promote Senior Spirit Days and other important initiatives. Together, we can enhance the student
                 experience and school spirit.</p>
@@ -243,9 +274,9 @@ h1 {
         <li>
             <strong>Yearbook Theme</strong>
             <ul class="sub-bullets">
-                <li>If elected, the yearbook theme will be Taylor Swift-themed.</li>
-                <li>For those who may not be fans of Taylor Swift, we will ensure alternative options and themes for the
-                    yearbook.</li>
+                <li>Vote for Chen-Karim and the yearbook will be Taylor Swift themed!
+</li>
+                <li>Unless you hate Taylor Swift, then vote for us or else we will make it Taylor Swift themed.</li>
             </ul>
             <p class="details">We want to create a memorable and inclusive yearbook experience for all seniors.</p>
         </li>
