--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
         </div>
     <div class="menu-container">
         <div class="menu-screen active">
-            <div class="menu-image" style="background-image: url('path/to/menu-image1.jpg');"></div>
+            <div class="menu-image" style="background-image: url('melody.jpg');"></div>
             <h2 class="menu-header">Melody Wang</h2>
-            <p class="menu-paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p class="menu-paragraph">Hi! My name’s Melody and I’m one of the campaign managers for the ChenKarim ticket. In my free time I’m either
+            practicing w the stunt/cheer team, directing latin, or volunteering! Also fun fact I have a bad obsession with boba</p>
         </div>
         <div class="menu-screen">
             <div class="menu-image" style="background-image: url('path/to/menu-image2.jpg');"></div>
@@ -108,12 +109,12 @@
         <div class="menu-screen">
             <div class="menu-image" style="background-image: url('path/to/menu-image3.jpg');"></div>
             <h2 class="menu-header">Intia Ibnah</h2>
-            <p class="menu-paragraph">Nulla nec fermentum tortor. Integer consectetur commodo interdum.</p>
+            <p class="menu-paragraph">TBA</p>
         </div>
         <div class="menu-screen">
             <div class="menu-image" style="background-image: url('path/to/menu-image4.jpg');"></div>
             <h2 class="menu-header">Pulindu Weerasekara</h2>
-            <p class="menu-paragraph">In eget est id urna fringilla tincidunt sed nec nisi.</p>
+            <p class="menu-paragraph">TBA</p>
         </div>
         <div class="menu-screen">
             <div class="menu-image" style="background-image: url('mohammed.jpg');"></div>
