--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             practicing w the stunt/cheer team, directing latin, or volunteering! Also fun fact I have a bad obsession with boba</p>
         </div>
         <div class="menu-screen">
-            <div class="menu-image" style="background-image: url('path/to/menu-image2.jpg');"></div>
+            <div class="menu-image" style="background-image: url('angela.jpg');"></div>
             <h2 class="menu-header">Angela Lin</h2>
             <p class="menu-paragraph">Hi. I'm Angela and I'm one of the campaign managers for Zidane and Anthony. I'm
                 not very involved in Stuy, but I have
