--- a/policies.html
+++ b/policies.html
@@ -112,7 +112,7 @@ h1 {
 <body>
     <div class="navbar">
         <a class="navbar-link" href="index.html">Home</a>
-        <a class="navbar-link" href="contact.html">Contact</a>
+        <a class="navbar-link" href="https://linktr.ee/chenkarim">Contact</a>
     </div>
     <center>
         <h1>List of Policies</h1>
