added pulindu photo

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <p class="menu-paragraph">  Hi I'm Intia Ibnah, a campaign manager for the Chen-Karim ticket, and you may be wondering what I am doing here. Well, I have to admit, I am a big advocate for many things, and I sincerely believe that the Chen-Karim crew will live out these ideals. I am also quite experienced. Thank you. Vote for the Chen-Karim ticket! </p>
         </div>
         <div class="menu-screen">
-            <div class="menu-image" style="background-image: url('path/to/menu-image4.jpg');"></div>
+            <div class="menu-image" style="background-image: url('pulindu.jpg');"></div>
             <h2 class="menu-header">Pulindu Weerasekara</h2>
             <p class="menu-paragraph">
                 
